--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^2.7.14",
-    "vue-router": "^3.6.5",
-    "vuex": "^3.6.2",
     "ant-design-vue": "^1.7.8",
     "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "lodash": "^4.17.21"
+    "vue": "^2.7.14",
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue2": "^2.2.0",
-    "vite": "^4.4.5",
+    "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
-    "@vue/eslint-config-prettier": "^8.0.0",
     "prettier": "^3.0.0",
-    "sass": "^1.64.1"
+    "sass": "^1.64.1",
+    "vite": "^4.4.5"
   },
   "keywords": [
     "vue",
