--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
+    "serve": "cd server && nodemon app.js",
     "build": "vite build",
     "preview": "vite preview",
-    "serve": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
@@ -29,6 +29,7 @@
     "eslint-plugin-vue": "^9.15.1",
     "events": "^3.3.0",
     "mutationobserver-shim": "^0.3.7",
+    "nodemon": "^3.1.10",
     "prettier": "^3.0.0",
     "process": "^0.11.10",
     "raf": "^3.4.1",
