--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "ai-prompt-admin-server",
   "version": "1.0.0",
   "description": "AI提示词管理系统后端API",
+  "type": "module",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -9,20 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.0",
-    "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "joi": "^17.9.2"
+    "mysql2": "^3.6.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "nodemon": "^3.1.10"
   },
   "keywords": [
     "nodejs",
