--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@ustinian-wang/kit": "^1.0.9",
     "ant-design-vue": "^1.7.4",
     "axios": "^1.4.0",
     "lodash": "^4.17.21",
