--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.0"
+    "mysql2": "^3.6.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "jest": "^29.6.2",
