--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.0.1",
     "@ustinian-wang/kit": "^1.0.9",
-    "ant-design-vue": "^1.7.4",
-    "axios": "^1.4.0",
+    "ant-design-vue": "^1.7.8",
+    "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "vue": "^2.7.14",
-    "vue-router": "^3.6.5",
-    "vuex": "^3.6.2"
+    "quill": "^1.3.7",
+    "tinymce": "^5.10.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.6",
