--- a/nginx.frontend.conf
+++ b/nginx.frontend.conf
@@ -39,7 +39,7 @@ http {
         image/svg+xml;
 
     server {
-        listen 80;
+        listen 4001;
         server_name localhost;
         
         # 前端静态文件
@@ -49,31 +49,23 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        # API代理到后端
-        location /api/ {
-            proxy_pass http://backend:4002/api/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # 处理CORS预检请求
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-        }
-
         # 健康检查
         location /health {
             access_log off;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
+        }
+
+        # 静态资源缓存
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|map)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Access-Control-Allow-Origin "*";
+        }
+
+        # 处理前端路由（SPA应用）
+        location ~ ^/(?!api|health|assets).*$ {
+            try_files $uri $uri/ /index.html;
         }
     }
 }
