chore: fix deploy

--- a/nginx.frontend.conf
+++ b/nginx.frontend.conf
@@ -20,6 +20,7 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
+    client_max_body_size 10M;
 
     # Gzip压缩
     gzip on;
@@ -42,7 +43,20 @@ http {
         listen 4001;
         server_name localhost;
         
-        # 前端静态文件
+        
+        # 前端静态文件 - 支持基础路径 /
+        location / {
+            alias /usr/share/nginx/html/;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html;
+            
+            # 添加安全头
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+        }
+        
+        # 直接访问根目录下的文件（兼容性）
         location / {
             root /usr/share/nginx/html;
             index index.html index.htm;
@@ -56,16 +70,43 @@ http {
             add_header Content-Type text/plain;
         }
 
-        # 静态资源缓存
+        # 静态资源缓存 - 优化缓存策略
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|map)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header Access-Control-Allow-Origin "*";
+            add_header Vary "Accept-Encoding";
+            
+            # 开启 gzip 预压缩
+            gzip_static on;
+        }
+        
+        # 字体文件特殊处理
+        location ~* \.(woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Access-Control-Allow-Origin "*";
+            add_header Access-Control-Allow-Methods "GET, OPTIONS";
+            add_header Access-Control-Allow-Headers "Origin, Accept, Content-Type";
         }
 
         # 处理前端路由（SPA应用）
         location ~ ^/(?!api|health|assets).*$ {
             try_files $uri $uri/ /index.html;
+        }
+        
+        # 拒绝所有API请求
+        location ~ ^/(api|admin|backend|server) {
+            return 404 "Not Found";
+        }
+        
+        # 错误页面
+        error_page 404 /index.html;
+        error_page 500 502 503 504 /50x.html;
+        
+        # 50x 错误页面
+        location = /50x.html {
+            root /usr/share/nginx/html;
         }
     }
 }
