--- a/nginx.frontend.conf
+++ b/nginx.frontend.conf
@@ -43,10 +43,9 @@ http {
         listen 4001;
         server_name localhost;
         
-        
-        # 前端静态文件 - 支持基础路径 /
+        # 前端静态文件 - 主要处理逻辑
         location / {
-            alias /usr/share/nginx/html/;
+            root /usr/share/nginx/html;
             index index.html index.htm;
             try_files $uri $uri/ /index.html;
             
@@ -54,13 +53,6 @@ http {
             add_header X-Frame-Options "SAMEORIGIN" always;
             add_header X-Content-Type-Options "nosniff" always;
             add_header X-XSS-Protection "1; mode=block" always;
-        }
-        
-        # 直接访问根目录下的文件（兼容性）
-        location / {
-            root /usr/share/nginx/html;
-            index index.html index.htm;
-            try_files $uri $uri/ /index.html;
         }
 
         # 健康检查
