chore: fix assets

--- a/nginx.res.conf
+++ b/nginx.res.conf
@@ -12,7 +12,7 @@ http {
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log;
+    error_log /var/log/nginx/error.log debug;
 
     # 基本设置
     sendfile on;
@@ -55,28 +55,45 @@ http {
             add_header X-XSS-Protection "1; mode=block" always;
         }
 
-        # 健康检查
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
-
-        # 静态资源缓存 - 优化缓存策略
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|map)$ {
+        # 专门处理assets目录下的静态资源
+        location /assets/ {
+            root /usr/share/nginx/html;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header Access-Control-Allow-Origin "*";
             add_header Vary "Accept-Encoding";
+            try_files $uri =404;
+            
+            # 调试日志
+            access_log /var/log/nginx/assets_access.log;
+        }
+
+        # 静态资源缓存 - 优化缓存策略
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|map)$ {
+            root /usr/share/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Access-Control-Allow-Origin "*";
+            add_header Vary "Accept-Encoding";
+            try_files $uri =404;
         }
         
         # 字体文件特殊处理
         location ~* \.(woff|woff2|ttf|eot)$ {
+            root /usr/share/nginx/html;
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header Access-Control-Allow-Origin "*";
             add_header Access-Control-Allow-Methods "GET, OPTIONS";
             add_header Access-Control-Allow-Headers "Origin, Accept, Content-Type";
+            try_files $uri =404;
+        }
+
+        # 健康检查
+        location /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
         }
         
         # 拒绝所有API请求
