--- a/.env.production
+++ b/.env.production
@@ -3,5 +3,5 @@ NODE_ENV=production
 VITE_NODE_ENV=production
 VITE_FRONTEND_PORT=4001
 VITE_BACKEND_URL=http://42.193.243.30:4002/
-VITE_API_BASE=/api
+VITE_API_BASE=http://42.193.243.30:4002/
 VITE_DEBUG=false
