--- a/server/Dockerfile.web
+++ b/server/Dockerfile.web
@@ -14,9 +14,18 @@ RUN yarn install --frozen-lockfile --production
 # 复制源代码
 COPY . .
 
-# 创建必要的目录
-RUN mkdir -p uploads logs data
+# 创建必要的目录结构
+RUN mkdir -p \
+    data/database \
+    data/cache \
+    data/logs \
+    uploads/images \
+    uploads/thumbnails \
+    uploads/documents \
+    uploads/temp
 
+# 设置目录权限
+RUN chmod -R 755 data uploads
 
 # 暴露端口
 EXPOSE 4002
