--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "db:migrate": "node scripts/migrate.js",
     "db:seed": "node scripts/seed.js",
-    "db:sync-unique": "node scripts/sync-unique-constraints.js"
+    "db:sync-unique": "node scripts/sync-unique-constraints.js",
+    "db:fix-time": "node scripts/fix-time-fields.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
