--- a/server/Dockerfile.web
+++ b/server/Dockerfile.web
@@ -19,31 +19,23 @@ COPY . .
 
 # 创建必要的目录结构
 RUN mkdir -p \
-    data/database \
-    data/cache \
-    data/logs \
-    uploads/images \
-    uploads/thumbnails \
-    uploads/documents \
-    uploads/temp
+    /app/data/database \
+    /app/data/cache \
+    /app/data/logs \
+    /app/uploads/images \
+    /app/uploads/thumbnails \
+    /app/uploads/documents \
+    /app/uploads/temp
 
 # 设置目录权限
-RUN chmod -R 755 data uploads
-RUN chmod +x scripts/init-db.sh
+RUN chmod -R 755 /app/data /app/uploads
+RUN chmod +x /app/scripts/init-db.sh
 
 # 暴露端口
 EXPOSE 4002
 
 # 创建启动脚本
-RUN echo '#!/bin/sh' > /app/start.sh && \
-    echo 'echo "🚀 启动应用..."' >> /app/start.sh && \
-    echo 'node app.js &' >> /app/start.sh && \
-    echo 'sleep 5' >> /app/start.sh && \
-    echo 'echo "🗄️ 初始化数据库..."' >> /app/start.sh && \
-    echo 'sh scripts/init-db.sh' >> /app/start.sh && \
-    echo 'echo "✅ 启动完成，保持容器运行..."' >> /app/start.sh && \
-    echo 'wait' >> /app/start.sh && \
-    chmod +x /app/start.sh
+RUN chmod +x /app/start.sh
 
 # 启动服务
 CMD ["/app/start.sh"]
