--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -8,14 +8,14 @@ RUN apk add --no-cache curl
 WORKDIR /app
 
 # 复制package文件
-COPY package*.json ./
-COPY yarn.lock ./
+COPY server/package*.json ./
+COPY server/yarn.lock ./
 
 # 安装依赖
 RUN yarn install --frozen-lockfile --production
 
 # 复制源代码
-COPY . .
+COPY server/ .
 
 # 创建必要的目录结构
 RUN mkdir -p \
