--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -8,7 +8,7 @@ RUN apk add --no-cache curl
 WORKDIR /app
 
 # 复制package文件
-COPY ./server/ ./
+COPY ./ ./
 
 # 安装依赖
 RUN yarn install --frozen-lockfile --production
