--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,14 @@
     "db:migrate": "node scripts/migrate.js",
     "db:seed": "node scripts/seed.js",
     "db:sync-unique": "node scripts/sync-unique-constraints.js",
-    "db:fix-time": "node scripts/fix-time-fields.js"
+    "db:fix-time": "node scripts/fix-time-fields.js",
+    "db:test-mysql": "node scripts/test-mysql-connection.js",
+    "db:init-mysql": "node scripts/init-database.js",
+    "db:init-tables": "node scripts/init-tables.js",
+    "db:migrate-sha256": "node scripts/migrate-to-sha256.js",
+    "test:sha256": "node scripts/test-sha256.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -26,8 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
     "uuid": "^11.1.0",
-    "sequelize": "^6.35.0",
-    "sqlite3": "^5.1.6"
+    "sequelize": "^6.35.0"
   },
   "devDependencies": {
     "jest": "^29.6.2",
