feat: update view by ui

--- a/nginx.res.conf
+++ b/nginx.res.conf
@@ -43,6 +43,17 @@ http {
         listen 4001;
         server_name localhost;
         
+        # 客户端应用入口点
+        location /client {
+            alias /usr/share/nginx/html;
+            try_files $uri $uri/ /client.html;
+            
+            # 添加安全头
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+        }
+        
         # 前端静态文件 - 主要处理逻辑
         location / {
             root /usr/share/nginx/html;
