chore: update ngx conf

--- a/nginx.res.conf
+++ b/nginx.res.conf
@@ -43,6 +43,19 @@ http {
         listen 4001;
         server_name localhost;
         
+        # 直接访问 /client.html
+        location = /client.html {
+            root /usr/share/nginx/html;
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+        }
+
+        # 将 /client 重定向到 /client.html（避免404/500）
+        location = /client {
+            return 302 /client.html;
+        }
+
         # 客户端应用入口点
         location /client {
             alias /usr/share/nginx/html;
