feat: add oss wto work list

--- a/docker.env
+++ b/docker.env
@@ -17,6 +17,9 @@ JWT_EXPIRES_IN=7d
 UPLOAD_MAX_SIZE=100MB
 UPLOAD_PATH=/app/uploads
 
+# 静态文件访问基础域名（用于拼接OSS返回URL）
+ASSET_BASE_URL=http://42.193.243.30:4002
+
 # 日志配置
 LOG_LEVEL=info
 LOG_PATH=/app/data/logs
