feat: add anomyous upload

--- a/docker.env
+++ b/docker.env
@@ -18,7 +18,8 @@ UPLOAD_MAX_SIZE=100MB
 UPLOAD_PATH=/app/uploads
 
 # 静态文件访问基础域名（用于拼接OSS返回URL）
-ASSET_BASE_URL=http://42.193.243.30:4002
+# 线上文件域名（容器环境）
+ASSET_BASE_URL=http://42.193.243.30:4001
 
 # 日志配置
 LOG_LEVEL=info
